Fix scrolling on small screens

--- a/static/css/style-pe.css
+++ b/static/css/style-pe.css
@@ -1,3 +1,36 @@
+/*****************************************************************
+ * Patches to FI template
+* ***************************************************************/
+
+html, body, #wrapper{
+	width:              100%;
+	height:             100%;
+}
+
+#wrapper{
+	display:            flex;
+	flex-flow:          column;
+}
+
+#header{
+	flex:               0 1 auto;
+}
+
+#content{
+	flex:               1 1 auto;
+}
+
+#footer{
+	flex:               0 1 auto;
+}
+
+
+
+
+/*****************************************************************
+ * CSS
+* ***************************************************************/
+
 
 /**{*/
 .pe-content *{
@@ -10,9 +43,11 @@
 .pe-content{
 	margin:             1em 0;
 	padding:            0;
-	overflow:           hidden;
+/*	overflow:           hidden;*/
+	overflow:           auto;
 /*	background-color:   rgba(0,0,0,0.1);*/
 	width:              100%;
+	height:             100%;
 }
 
 a{
